# TFNBS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
bnetdiff/: nbs_utils.py  pairwise_tfns.py  tfnos.py  utils.py
datasets/02_BLOCK_VAR_HRF_SNR05_CORRDIFF/: READ_ME.txt
docs/source/: conf.py  index.rst  installation.rst  references.rst  tfnbs.nbs_utils.rst  tfnbs.rst
examples/: EEG_example.ipynb  Example.ipynb  TFNBS_Example.ipynb
tests/: context.py  test_datasets.py  test_datasets_old.py  test_eeg_utils.py  test_nbs_utils.py  test_pairwise_tfns.py  test_tfnos.py  test_utils.py
tfnbs/: __init__.py  datasets.py  eeg_utils.py  nbs_utils.py  pairwise_tfns.py  tfnos.py  utils.py
