[project]
name = "tfnbs"
version = "0.1.0"
description = "Threshold-Free Network-Based Statistics Python package"
authors = [
    {name = "Irina Knyazeva",email = "iknyazeva@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy (>=1.14,<2.0)",
    "scikit-learn (>=1.5,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
